--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -5,7 +5,9 @@ jobs:
     runs-on: ubuntu:latest
     steps:
       - name: Print greeting
-        run: echo "Hello World"
+        run: |
+            echo "Hello World"
+            echo "Extra input"
       - name: Print bye
         run: echo "Done bye"
         
